Style changes and fixed mobile scroll Projects have constant box shadow now instead of only on hover Projects now increase in scale on hover View projects button smooth scroll now works on mobile with react-scroll

--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -39,6 +39,9 @@
 }
 .view-work-button{
     position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 3.5rem;
     width: 12rem;
     border-radius: 5px;
