--- a/src/Home/Project.css
+++ b/src/Home/Project.css
@@ -26,14 +26,19 @@
     height: 500px;
     width: 400px;
     padding: 2em;
-    transition: box-shadow 0.3s, background-color 0.3s;
+    transition: box-shadow 0.3s, background-color 0.3s, transform 0.3s;
     border-radius: 10px;
     margin: 50px;
 }
-.projects:hover{
-    box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 50px 1px;
+
+.projects{
+    box-shadow: rgba(0, 0, 0, 0.5) 0px 22px 50px 1px;
     background-color: #252a2e;
 }
+.projects:hover{
+    transform: scale(1.03);
+}
+
 .project-image-container{
     display: flex;
     flex-direction: column;
@@ -157,6 +162,7 @@
 
 @media only screen and (max-width: 913px) { 
     .projects-container{
+        display: flex;
         flex-direction: column;
     }
     .projects{
@@ -170,7 +176,6 @@
     .project-projects{
         width: 90%;
     }
-
     .project-text-container{
         width: 80%;
     }
